# aggregator

./: .env.dist  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
requirements/: dev.txt
src/: urls.py
src/common/: models.py
src/config/: common.py
src/scraper/: models.py  models_test.py  serializers.py  tasks.py  tasks_test.py  urls.py  viewsets.py  viewsets_test.py
src/scraper/management/commands/: scrape.py
